added decorator for serializing request data
