# src/swagger/swagger.yml
@@ -27,10 +27,10 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/User"
+              $ref: "#/components/schemas/UserCreate"
           application/x-www-form-urlencoded:
             schema:
-              $ref: "#/components/schemas/User"
+              $ref: "#/components/schemas/UserCreate"
       responses:
         "200":
           description: User details
@@ -59,6 +59,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/User"
+        "404":
+          description: Not found
 components:
   schemas:
     User:
@@ -70,6 +72,18 @@ components:
         id:
           type: integer
           example: null
+        username:
+          type: string
+          example: user
+        email:
+          type: string
+          example: user@email.com
+    UserCreate:
+      type: object
+      required:
+        - username
+        - email
+      properties:
         username:
           type: string
           example: user
