# src/user/serializers.py
@@ -5,8 +5,17 @@ from user.models import User
 class UserSerializer(ma.SQLAlchemyAutoSchema):
     class Meta:
         model = User
-        include_fk = True
 
 
-user_serializer = UserSerializer()
-users_serializer = UserSerializer(many=True)
+class UserCreateSerializer(ma.SQLAlchemyAutoSchema):
+    class Meta:
+        fields = (
+            "username",
+            "email"
+        )
+
+
+user_serializer=UserSerializer()
+users_serializer=UserSerializer(many=True)
+
+user_create_serializer=UserCreateSerializer()
